Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/060_procedure_too_less_args_expect2.xi
f(x:int, y:int)

g()
{
    f(1)
}
//@PRACOWNIA
//@should_not_typecheck
